# mlops

./: .gitignore  README.md  pyproject.toml
data/phone_prices/: .gitignore  train.csv.dvc  y_train.csv.dvc
lab8app/: app.py  test_app.py
notebooks/: Lab_2_exp_tracking_local.ipynb  Lab_3_data_versioning.ipynb
notebooks/app/: reddit-deployment-gke.yaml  reddit-deployment-minikube.yaml  reddit-service-gke.yaml  reddit-service-minikube.yaml
notebooks/save_data/: x_train.parquet  y_train.parquet
src/: preprocessing.py  scoringflow.py  trainingflow.py
