[project]
name = "mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "Dexter Corley",email = "dexter.corley@live.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow (>=2.21.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
